    - Anyone truly needing "trash" support will need to add a dependency
      on Mac::Glue themself. The function may be split out of File::Remove
      later down the track.
    - Constanting the debugger flag for a minor speed and memory improvement
    - Copy in a known-readonly flag for more accurate testing on Win32
    - Remove assumption that -w implied deletion rights on Win32
    - Validate that the file was actually deleted

0.35 Fri  9 Feb 2007  (Stephen Steneker)
    - Update makefile to require Mac::Glue version compatible with Intel macs
    - Change pod heading from "methods" to "subroutines" [RT#13687]
    - No functional changes from 0.34

0.34 Mon Nov 6 2006
    - Update t/03 to skip the "is this file not writable" test when
      it would fail because the tests are being run by root (as sometimes
      happens when installing Perl modules). 
                            --Jesse Vincent (jesse@bestpractical.com)

0.33 Tue 24 Oct 2006
    - Previous release tested ok.
    - Incrementing for production release.
    - No functional changes

0.32_01 Mon 23 Oct 2006
    - Use File::Spec to clean/canon paths instead of hand-stripping trailing slash
    - Apply the File::Path "safe" check manually for the root only, and
      use File::Path itself with safe OFF, so that we can handle deleting
      deep readonly files (and do it properly on VMS)
    - Added a test for the deletion of deep readonly files
    - Removing the use of "our" variables to try and get the Perl version
      dependency back to at least 5.005.
    - Report "deleted" for non-existant files they want to delete
    - Report the path they pass, but for dir USE a File::Spec->canonpath

0.31 Wed Dec 28 17:40:00 2005
    - Applied Eric Hanchrow's patch to support filenames with spaces.
    - Skip recycle tests unless recycle/trash support is available.

0.30 Wed Jul 14 19:12:00 2005
    - Applied CNANDOR's patch to fix trash() support on OS X 10.4.

0.29 Mon Dec 04 16:35:00 2004